fix spacing on mobile

--- a/style.css
+++ b/style.css
@@ -84,3 +84,9 @@ p,
 .form-control:focus {
   box-shadow: 0 0 0 0.25rem rgba(35, 93, 106, 0.25) !important;
 }
+
+@media screen and (max-width: 768px) {
+  .pb-sm {
+    padding-bottom: 20px;
+  }
+}
